[tool.poetry]
name = "swogalo"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "20.2.0"
certifi = "2020.6.20"
chardet = "3.0.4"
idna = "2.10"
importlib-metadata = "2.0.0"
Jinja2 = "2.11.2"
jsonschema = "3.2.0"
MarkupSafe = "1.1.1"
pyrsistent = "0.17.3"
PyYAML = "5.4"
requests = "2.24.0"
six = "1.15.0"
swagger-parser = "1.0.1"
swagger-spec-validator = "2.7.3"
urllib3 = "1.25.10"
zipp = "3.2.0"
jsonlines = "*"
bencodepy = "*"
ksuid = "*"
aiohttp = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
